# Buscar-benchmark-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  r_buscar_env.yaml
notebooks/0.download-data/: 1.download-data.ipynb  2.preprocessing.ipynb
notebooks/0.download-data/nbconverted/: 1.download-data.py  2.preprocessing.py
notebooks/1.cfret-analysis/: 1.cfret-pilot-buscar-analysis.ipynb  3.generate-pca-umap-components.ipynb  4.assess-signature-significance.ipynb
notebooks/1.cfret-analysis/nbconverted/: 1.cfret-pilot-buscar-analysis.py  3.generate-pca-umap-components.py  4.assess-signature-significance.py
notebooks/1.cfret-analysis/plots/: 3.cfret-signature-effect-size-vs-sig-plot.ipynb  4.cfret-compound-scores-plot.ipynb  5.buscar-scores-and-cell-count-scatter-ploy.ipynb  _4.cfret-compound-scores-plot.ipynb
notebooks/2.mitocheck-analysis/: 0.explore-mitocheck-data.ipynb  1.buscar-analysis.ipynb
notebooks/2.mitocheck-analysis/nbconverted/: 0.explore-mitocheck-data.py  1.buscar-analysis.py
notebooks/2.mitocheck-analysis/plots/: 2.gene-ranking-relationship.ipynb  3.linear-modeling-ranking-and-proportion.ipynb
notebooks/3.cpjump1-analysis/: 1.generate-on-off-signatures.ipynb  2.run-compound-replicate-consistency-analysis.ipynb  3.run-crispr-replicate-consistency-analysis.ipynb  run-cpjump1-buscar-analysus.sh
notebooks/3.cpjump1-analysis/nbconverted/: 1.generate-on-off-signatures.py  2.run-compound-replicate-consistency-analysis.py  3.run-crispr-replicate-consistency-analysis.py  (+1 more)
utils/: data_utils.py  io_utils.py
(+45 files in other folders)
